@startuml stem
'https://plantuml.com/class-diagram

hide members
hide methods

struct Position
enum TokenType
class TokenUtils
class Token
class Error
class IllegalCharError
class SyntaxError
enum NodeType
class Node
class ValueNode
class OpNode
class DigitNode
class IdentifierNode
class BinOpNode
class UnaOpNode
interface EntryPoint
class PluginLoader
class Reader
class Lexer
class Parser
class Generator

TokenUtils ..> TokenType
Token o--> "1" TokenType
Token o--> "1" Position
Error o--> "1" Position
IllegalCharError --|> Error
IllegalCharError ..> Position
SyntaxError --|> Error
SyntaxError ..> Position
Node o--> "1" Token
Node ..> NodeType
ValueNode --|> Node
ValueNode ..> Token
OpNode --|> Node
OpNode ..> Token
DigitNode --|> ValueNode
DigitNode ..> Token
IdentifierNode --|> ValueNode
IdentifierNode ..> Token
BinOpNode --|> OpNode
BinOpNode o--> "2" Node
BinOpNode ..> Token
BinOpNode ..> TokenType
UnaOpNode --|> OpNode
UnaOpNode o--> "1" Node
UnaOpNode ..> Token
UnaOpNode ..> TokenType
EntryPoint ..> Node
EntryPoint ..> OpNode
PluginLoader o--> "*" EntryPoint
Lexer ..> Error
Lexer ..> IllegalCharError
Lexer o--> "*" Token
Lexer ..> TokenType
Lexer ..> TokenUtils
Lexer o--> "1" Position
Parser ..> Error
Parser ..> SyntaxError
Parser o--> "*" Token
Parser o--> "2" TokenType
Parser o--> "*" Node
Parser o--> "1" UnaOpNode
Parser ..> BinOpNode
Parser ..> DigitNode
Parser ..> IdentifierNode
Generator o--> "*" EntryPoint
Generator o--> "1" Node
Generator ..> OpNode

@enduml